add - Added localizations
---

This is necessary to start the Localizer merge as soon as we're done
merging the app to the .Base and the .Core libraries.

---

Type: add
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt.json
@@ -4412,6 +4412,38 @@
     "dì sān gè lán sè zuìgāo děngjí",
     "dì sān gè zuìdà yánsè jí bié",
     "rúguǒ qǐyòng, jìndù jiāng xuǎnzé suíjī yánsè. Fǒuzé, qǐng shǐyòng pèizhì zhōng de yánsè.",
-    "Rúguǒ qǐyòngle yánsè xúnhuán, nàme zài jìndù zhòng xūyào duōshǎo gè kèdù cáinéng gǎibiàn yánsè? 1 Kè = 0.5 Miǎo"
+    "Rúguǒ qǐyòngle yánsè xúnhuán, nàme zài jìndù zhòng xūyào duōshǎo gè kèdù cáinéng gǎibiàn yánsè? 1 Kè = 0.5 Miǎo",
+    "Shèdìng tiáomù míngchēng bùnéng wéi kōng",
+    "shèdìng tiáomù miáoshù bùnéng wéi kōng",
+    "shèdìng tiáomù dì shèdìng jiàn lièbiǎo bùnéng wéi kōng",
+    "shèdìng jiàn míngchēng bùnéng wéi kōng",
+    "shèdìng jiàn bùnéng bāohán wúxiào de jiàn lèixíng",
+    "nèihé zhǔ shèdìng",
+    "héxīn yíngmù bǎohù chéngshì shèdìng",
+    "héxīn qǐdòng huàmiàn shèdìng",
+    "nèihé xiǎo gōngjù shèdìng",
+    "xuǎnzé pèizhì",
+    "jiù bǎn shèdìng yìngyòng chéngshì yǐ qì yòng, bìng jiàng zài wèilái bǎnběn zhōng yí chú.",
+    "Tíshì nín xuǎnzé pèizhì shílì",
+    "xuǎnzé yào qiēhuàn dào de pèizhì shílì.",
+    "Wúfǎ xuǎnzé pèizhì",
+    "shēngchǎn rìqí wúxiào",
+    "yǒuxiào qíxiàn wúxiào",
+    "yǒuxiào qíxiàn wúxiào",
+    "shēngchǎn rìqí",
+    "yǒuxiào qíxiàn",
+    "yǒuxiào qíxiàn kuà",
+    "chǎnpǐn jiànkāng zhuàngkuàng",
+    "chǎnpǐn zhuàngtài",
+    "wúfǎ qǔdé chǎnpǐn yǒuxiào qíxiàn zīxùn",
+    "qǔdé chǎnpǐn yǒuxiào qíxiàn zīxùn",
+    "shēngchǎn rìqí (qǐng chákàn chǎnpǐn cèmiàn huò dǐbù)",
+    "yǒuxiào qíxiàn huò qíxiàn (míngquè xiě zài tóngyī wèizhì huò shíduàn, lìrú 6 gè yuè huò 1 nián)",
+    "mùbiāo chǎnpǐn shìfǒu wèi míngquè zhǐdìng yǒuxiào qíxiàn",
+    "yíngmù bǎohù chéngshì shèdìng...",
+    "Éwài Shell bāo",
+    "éwài nèiróng - rìqí",
+    "éwài nèiróng - hā xī zhí",
+    "éwài nèiróng - liáotiān jīqìrén AI"
   ]
 }
