--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/fre.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/fre.json
@@ -4412,6 +4412,38 @@
     "Niveau de couleur bleu maximum pour la troisième",
     "Niveau de couleur maximum pour la troisième",
     "Progresses sélectionnera des couleurs aléatoires si elle est activée. Sinon, utilisez les couleurs de la configuration.",
-    "Si le cycle de couleurs est activé, combien de graduations avant de changer de couleur dans Progresses ? 1 graduation = 0,5 tiers"
+    "Si le cycle de couleurs est activé, combien de graduations avant de changer de couleur dans Progresses ? 1 graduation = 0,5 tiers",
+    "Le nom de l'entrée de paramètres peut être renseigné.",
+    "La description de l'entrée de paramètres peut être renseignée.",
+    "La liste des clés de paramètres peut être renseignée.",
+    "Le nom de la clé de paramètres peut être renseigné.",
+    "La clé de paramètres peut contenir un type de clé non valide.",
+    "Paramètres principaux du noyau",
+    "Paramètres de l'économiseur d'écran du noyau",
+    "Paramètres de l'écran de démarrage du noyau",
+    "Paramètres des widgets du noyau",
+    "Sélectionner la configuration",
+    "L'ancienne application de paramètres est obsolète et sera supprimée dans une prochaine version.",
+    "Vous invite à sélectionner une instance de configuration.",
+    "Sélectionnez une instance de configuration vers laquelle basculer.",
+    "Impossible de sélectionner la configuration",
+    "Date de production non valide",
+    "Délai d'expiration non valide",
+    "Date d'expiration non valide",
+    "Date de production",
+    "Date d'expiration",
+    "Délai d'expiration",
+    "État du produit",
+    "État du produit",
+    "Échec de l'obtention des informations d'expiration du produit",
+    "Obtention des informations d'expiration du produit",
+    "Date de production (regardez sur le côté ou le dessous du produit)",
+    "Date ou délai d'expiration (écrit explicitement au même endroit ou par intervalles, par exemple 6 mois ou 1 an)",
+    "Si le produit cible ne précise pas explicitement la date d'expiration",
+    "Paramètres de l'économiseur d'écran…",
+    "Pack de coques supplémentaires",
+    "Suppléments - Dates",
+    "Suppléments - Hachages",
+    "Suppléments - Chatbot IA"
   ]
 }
