--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ind-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ind-T.json
@@ -4412,6 +4412,38 @@
     "तीसरी पट्टी के लिए अधिकतम नीला रंग स्तर",
     "तीसरी पट्टी के लिए अधिकतम रंग स्तर",
     "यदि यह सक्षम है तो प्रगति यादृच्छिक रंगों का चयन करेगी। अन्यथा, कॉन्फ़िगरेशन से रंगों का उपयोग करें।",
-    "यदि रंग साइकलिंग सक्षम है, तो प्रगति में रंग बदलने से पहले कितने टिक हैं? 1 टिक = 0.5 तीसरी"
+    "यदि रंग साइकलिंग सक्षम है, तो प्रगति में रंग बदलने से पहले कितने टिक हैं? 1 टिक = 0.5 तीसरी",
+    "सेटिंग प्रविष्टि का नाम रिक्त नहीं हो सकता",
+    "सेटिंग प्रविष्टि विवरण रिक्त नहीं हो सकता",
+    "सेटिंग प्रविष्टि में रिक्त सेटिंग कुंजी सूची नहीं हो सकती",
+    "सेटिंग कुंजी का नाम रिक्त नहीं हो सकता",
+    "सेटिंग कुंजी में अमान्य कुंजी प्रकार नहीं हो सकता",
+    "कर्नेल मुख्य सेटिंग",
+    "कर्नेल स्क्रीनसेवर सेटिंग",
+    "कर्नेल स्प्लैश सेटिंग",
+    "कर्नेल विजेट सेटिंग",
+    "कॉन्फ़िगरेशन चुनें",
+    "लीगेसी सेटिंग ऐप को हटा दिया गया है और इसे भविष्य के रिलीज़ में हटा दिया जाएगा।",
+    "आपको कॉन्फ़िगरेशन इंस्टेंस चुनने के लिए संकेत देता है",
+    "स्विच करने के लिए कॉन्फ़िगरेशन इंस्टेंस चुनें।",
+    "कॉन्फ़िगरेशन का चयन नहीं किया जा सकता",
+    "उत्पादन तिथि अमान्य है",
+    "समाप्ति समय अवधि अमान्य है",
+    "समाप्ति तिथि अमान्य है",
+    "उत्पादन तिथि",
+    "समाप्ति तिथि",
+    "समाप्ति समय अवधि",
+    "उत्पाद स्वास्थ्य",
+    "उत्पाद स्थिति",
+    "उत्पाद समाप्ति जानकारी प्राप्त करने में विफल",
+    "उत्पाद समाप्ति जानकारी प्राप्त करता है",
+    "उत्पादन तिथि (उत्पाद के किनारे या नीचे देखें)",
+    "समाप्ति तिथि या समय अवधि (या तो एक ही स्थान पर या समय अवधि में स्पष्ट रूप से लिखी गई है, जैसे कि 6 महीने या 1 वर्ष)",
+    "क्या लक्ष्य उत्पाद समाप्ति तिथि को स्पष्ट रूप से निर्दिष्ट नहीं करता है",
+    "स्क्रीनसेवर सेटिंग्स...",
+    "अतिरिक्त शैल पैक",
+    "अतिरिक्त - तिथियाँ",
+    "अतिरिक्त - हैश",
+    "अतिरिक्त - चैटबॉट AI"
   ]
 }
