--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/jpn.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/jpn.json
@@ -4412,6 +4412,38 @@
     "3 番目の最大青色レベル",
     "3 番目の最大色レベル",
     "Progresses が有効になっている場合、ランダムな色が選択されます。そうでない場合は、構成の色を使用します。",
-    "色の循環が有効になっている場合、Progresses で色を変更する前に何ティック必要ですか? 1 ティック = 0.5 秒"
+    "色の循環が有効になっている場合、Progresses で色を変更する前に何ティック必要ですか? 1 ティック = 0.5 秒",
+    "設定エントリ名は空欄にできません。",
+    "設定エントリの説明は空欄にできません。",
+    "設定エントリの設定キーリストは空欄にできません。",
+    "設定キー名は空欄にできません。",
+    "設定キーに無効なキータイプを指定することはできません。",
+    "カーネルのメイン設定",
+    "カーネルのスクリーンセーバー設定",
+    "カーネルのスプラッシュ設定",
+    "カーネルのウィジェット設定",
+    "構成を選択",
+    "従来の設定アプリは廃止され、将来のリリースで削除される予定です。",
+    "構成インスタンスの選択を求められます。",
+    "切り替える構成インスタンスを選択してください。",
+    "設定を選択できません",
+    "製造日が無効です",
+    "有効期限が無効です",
+    "有効期限が無効です",
+    "製造日",
+    "有効期限",
+    "有効期限期間",
+    "製品の健全性",
+    "製品のステータス",
+    "製品の有効期限情報の取得に失敗しました",
+    "製品の有効期限情報を取得します",
+    "製造日（製品の側面または底面をご覧ください）",
+    "有効期限または期間（同じ場所に明示的に記載されているか、6か月や1年などの期間）",
+    "対象製品に有効期限が明示的に指定されていないかどうか",
+    "スクリーンセーバーの設定...",
+    "エクストラシェルパック",
+    "エクストラ - 日付",
+    "エクストラ - ハッシュ",
+    "エクストラ - チャットボットAI"
   ]
 }
