--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ltn.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ltn.json
@@ -4412,6 +4412,38 @@
     "Maximum caeruleum colorem tertium",
     "Maximum colorem gradu tertio",
     "Progressiones temere colores eligent si idoneus est. Alioquin colore config uti.",
-    "Si color cyclus efficitur, quot ricini ante mutantur colores in progressionibus? 1 ricinum = 0.5 tertium"
+    "Si color cyclus efficitur, quot ricini ante mutantur colores in progressionibus? 1 ricinum = 0.5 tertium",
+    "Occasus ingressum nomen non sit vacua",
+    "Occasus ingressum descriptio non vacua",
+    "Occasus ingressum non habet vacua occasus key album",
+    "Optiones key nomen non sit vacua",
+    "Optiones clavis non potest habere irritum key genus",
+    "Kernel principalis occasus",
+    "Kernel Screensaver occasus",
+    "Kernel adipiscing occasus",
+    "Kernel content occasus",
+    "Configuratione Select",
+    "Legatum occasus app deprecatus est et in futura emissione tolletur.",
+    "Monet te eligere configuratione exempli",
+    "Configurationis exempli gratia ad flectendum est.",
+    "Non potest eligere configuratione",
+    "Productio date invalidum",
+    "Exitus tempus invalidum est",
+    "Exitus diem invalidum est",
+    "Productio diem",
+    "Exitus diem",
+    "Exitus temporis spatium",
+    "Product sanitas",
+    "Product status",
+    "Deficio ut productum Lapsu notitia",
+    "Exitus ad productum accipit notitia",
+    "Productio date (vide vel latus vel imum producti)",
+    "Dies elapsus vel temporis periodus (vel expresse scriptus in eodem loco vel spatio temporis, ut 6 menses vel 1 annus)",
+    "Utrum scopum productum non dat terminum expresse",
+    "Screensaver occasus...",
+    "Extra Shells Pack",
+    "Extras - Dates",
+    "Re - Hashes",
+    "Extras - Chatbot AI"
   ]
 }
