--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ptg.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ptg.json
@@ -4412,6 +4412,38 @@
     "Nível máximo de cor azul para o terceiro",
     "Nível máximo de cor para o terceiro",
     "Os progressos selecionarão cores aleatórias se estiverem ativados. Caso contrário, utilize cores da configuração.",
-    "Se o ciclo de cores estiver activado, quantos tiques faltam para alterar as cores no Progresso? 1 tique = 0,5 terços"
+    "Se o ciclo de cores estiver activado, quantos tiques faltam para alterar as cores no Progresso? 1 tique = 0,5 terços",
+    "O nome da entrada de definições não pode estar vazio",
+    "A descrição da entrada de definições não pode estar vazia",
+    "A entrada de definições não pode ter uma lista de chaves de definições vazia",
+    "O nome da chave de definições não pode estar vazio",
+    "A chave de definições não pode conter um tipo de chave inválido",
+    "Configurações principais do kernel",
+    "Configurações do protetor de ecrã do kernel",
+    "Configurações do ecrã inicial do kernel",
+    "Configurações dos widgets do kernel",
+    "Selecionar configuração",
+    "O aplicativo de definições legado foi descontinuado e será removido numa versão futura.",
+    "Solicita que selecione uma instância de configuração",
+    "Selecione uma instância de configuração para alternar.",
+    "Não é possível selecionar a configuração",
+    "Data de produção inválida",
+    "Período de validade inválido",
+    "Data de validade inválida",
+    "Data de produção",
+    "Data de validade",
+    "Período de validade",
+    "Saúde do produto",
+    "Estado do produto",
+    "Falha ao obter informações de validade do produto",
+    "Obtém as informações de validade do produto",
+    "Data de produção (consulte a parte lateral ou inferior do produto)",
+    "Data ou período de validade (explicitamente escritos no mesmo local ou em períodos de tempo, como por exemplo 6 meses ou 1 ano)",
+    "Se o produto de destino não especificar a data de validade explicitamente",
+    "Definições do protetor de ecrã...",
+    "Pacote de Shells Extras",
+    "Extras - Datas",
+    "Extras - Hashes",
+    "Extras - IA do Chatbot"
   ]
 }
