--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/rmn.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/rmn.json
@@ -4412,6 +4412,38 @@
     "Nivel maxim de culoare albastră pentru a treia",
     "Nivel maxim de culoare pentru a treia",
     "Progress va selecta culori aleatorii dacă este activat. În caz contrar, utilizați culorile din config.",
-    "Dacă ciclul de culoare este activat, câte bifări înainte de a schimba culorile în Progress? 1 bif = 0,5 treime"
+    "Dacă ciclul de culoare este activat, câte bifări înainte de a schimba culorile în Progress? 1 bif = 0,5 treime",
+    "Este posibil ca numele intrării setărilor să nu fie necompletat",
+    "Este posibil ca descrierea intrării setărilor să nu fie goală",
+    "Este posibil ca intrarea de setări să nu aibă o listă de chei de setări goală",
+    "Numele cheii de setări poate să nu fie gol",
+    "Este posibil ca cheia de setări să nu dețină un tip de cheie nevalid",
+    "Setările principale ale kernelului",
+    "Setări pentru screensaverul kernelului",
+    "Setări de stropire a nucleului",
+    "Setări pentru widget-uri Kernel",
+    "Selectați configurația",
+    "Vechea aplicație de setări a fost retrasă și va fi eliminată într-o versiune viitoare.",
+    "Vă solicită să selectați o instanță de configurare",
+    "Selectați o instanță de configurare la care să comutați.",
+    "Nu se poate selecta configurația",
+    "Data producției este invalidă",
+    "Perioada de expirare este nevalidă",
+    "Data de expirare este nevalidă",
+    "Data producției",
+    "Data de expirare",
+    "Perioada de expirare",
+    "Sănătatea produsului",
+    "Starea produsului",
+    "Nu s-au putut obține informațiile despre expirarea produsului",
+    "Obține informațiile despre expirarea produsului",
+    "Data producției (uitați-vă fie pe partea laterală, fie pe partea de jos a produsului)",
+    "Data de expirare sau perioada de timp (fie scrisă explicit în același loc sau intervale de timp, cum ar fi 6 luni sau 1 an)",
+    "Dacă produsul țintă nu specifică în mod explicit data de expirare",
+    "Setări pentru screensaver...",
+    "Pachet suplimentar de scoici",
+    "Suplimente - Date",
+    "Suplimente - Hashes",
+    "Suplimente - Chatbot AI"
   ]
 }
