--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/spa.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/spa.json
@@ -4412,6 +4412,38 @@
     "Nivel máximo de color azul para el tercero",
     "Nivel máximo de color para el tercero",
     "Progresses seleccionará colores aleatorios si está habilitado. De lo contrario, usa los colores de la configuración.",
-    "Si el ciclo de color está habilitado, ¿cuántos ticks antes de cambiar los colores en Progresses? 1 tick = 0,5 tercios"
+    "Si el ciclo de color está habilitado, ¿cuántos ticks antes de cambiar los colores en Progresses? 1 tick = 0,5 tercios",
+    "El nombre de la entrada de configuración no puede estar vacío.",
+    "La descripción de la entrada de configuración no puede estar vacía.",
+    "La entrada de configuración no puede tener una lista de claves de configuración vacía.",
+    "El nombre de la clave de configuración no puede estar vacío.",
+    "La clave de configuración no puede contener un tipo de clave no válido.",
+    "Configuración principal del kernel",
+    "Configuración del protector de pantalla del kernel",
+    "Configuración de la pantalla de inicio del kernel",
+    "Configuración de los widgets del kernel",
+    "Seleccionar configuración",
+    "La aplicación de configuración heredada ha quedado obsoleta y se eliminará en una próxima versión.",
+    "Le solicita que seleccione una instancia de configuración.",
+    "Seleccione una instancia de configuración a la que cambiar.",
+    "No se puede seleccionar la configuración",
+    "Fecha de producción inválida",
+    "Periodo de caducidad inválido",
+    "Fecha de caducidad inválida",
+    "Fecha de producción",
+    "Fecha de caducidad",
+    "Periodo de caducidad",
+    "Estado del producto",
+    "Estado del producto",
+    "No se pudo obtener la información de caducidad del producto",
+    "Obtiene la información de caducidad del producto",
+    "Fecha de producción (ver el lateral o la parte inferior del producto)",
+    "Fecha o período de caducidad (ya sea escrito explícitamente en el mismo lugar o en períodos, como 6 meses o 1 año)",
+    "Si el producto de destino no especifica la fecha de caducidad explícitamente",
+    "Configuración del protector de pantalla...",
+    "Paquete de carcasas adicionales",
+    "Extras - Fechas",
+    "Extras - Hashes",
+    "Extras - IA de chatbot"
   ]
 }
