--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ukr.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ukr.json
@@ -4412,6 +4412,38 @@
     "Максимальний рівень синього кольору для третього",
     "Максимальний рівень кольору для третього",
     "Прогрес вибере випадкові кольори, якщо це ввімкнено. В іншому випадку використовуйте кольори з конфігурації.",
-    "Якщо зміну кольорів увімкнено, скільки позначок перед зміною кольорів у прогресі? 1 тик = 0,5 третини"
+    "Якщо зміну кольорів увімкнено, скільки позначок перед зміною кольорів у прогресі? 1 тик = 0,5 третини",
+    "Назва параметрів не може бути пустою",
+    "Опис параметрів не може бути порожнім",
+    "Запис налаштувань може не мати пустого списку ключів налаштувань",
+    "Назва ключа налаштувань не може бути пустою",
+    "Ключ налаштувань може не містити недійсний тип ключа",
+    "Основні налаштування ядра",
+    "Налаштування заставки ядра",
+    "Налаштування заставки ядра",
+    "Налаштування віджетів ядра",
+    "Виберіть конфігурацію",
+    "Застаріла програма налаштувань більше не підтримується та буде видалена в наступному випуску.",
+    "Пропонує вибрати екземпляр конфігурації",
+    "Виберіть екземпляр конфігурації для переходу.",
+    "Не вдається вибрати конфігурацію",
+    "Дата виробництва недійсна",
+    "Термін дії недійсний",
+    "Термін придатності недійсний",
+    "Дата виробництва",
+    "Термін придатності",
+    "Термін придатності",
+    "Здоров'я продукту",
+    "Статус товару",
+    "Не вдалося отримати інформацію про термін придатності продукту",
+    "Отримує інформацію про термін придатності продукту",
+    "Дата виробництва (дивіться або збоку, або знизу виробу)",
+    "Термін придатності або період часу (або чітко вказано в тому самому місці, або проміжки часу, наприклад 6 місяців або 1 рік)",
+    "Чи в цільовому продукті не вказано чітко термін придатності",
+    "Налаштування заставки...",
+    "Пакет додаткових оболонок",
+    "Додатково - Фініки",
+    "Додатково - Хеші",
+    "Додатково - Chatbot AI"
   ]
 }
