--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb-T.json
@@ -4412,6 +4412,38 @@
     "الحد الأقصى لمستوى اللون الأزرق للشريط الثالث",
     "الحد الأقصى لمستوى اللون للشريط الثالث",
     "ستختار ميزة Progresses ألوانًا عشوائية إذا تم تمكينها. وإلا، فاستخدم الألوان من التكوين.",
-    "إذا تم تمكين دورة الألوان، فكم عدد العلامات قبل تغيير الألوان في ميزة Progresses؟ 1 علامة = 0.5 علامة ثالثة"
+    "إذا تم تمكين دورة الألوان، فكم عدد العلامات قبل تغيير الألوان في ميزة Progresses؟ 1 علامة = 0.5 علامة ثالثة",
+    "قد لا يكون اسم إدخال الإعدادات فارغًا.",
+    "قد لا يكون وصف إدخال الإعدادات فارغًا.",
+    "قد لا تحتوي قائمة مفاتيح الإعدادات على إدخال إعدادات فارغ.",
+    "قد لا يكون اسم مفتاح الإعدادات فارغًا.",
+    "قد لا يحتوي مفتاح الإعدادات على نوع مفتاح غير صالح.",
+    "إعدادات النواة الرئيسية.",
+    "إعدادات شاشة توقف النواة.",
+    "إعدادات بدء تشغيل النواة.",
+    "إعدادات أدوات النواة.",
+    "اختيار التكوين.",
+    "تم إيقاف تطبيق الإعدادات القديم وسيتم إزالته في إصدار مستقبلي.",
+    "يُطلب منك اختيار نسخة تكوين.",
+    "حدد نسخة تكوين للتبديل إليها.",
+    "لا يمكن تحديد الإعدادات",
+    "تاريخ الإنتاج غير صحيح",
+    "فترة انتهاء الصلاحية غير صحيحة",
+    "تاريخ الانتهاء غير صحيح",
+    "تاريخ الإنتاج",
+    "تاريخ الانتهاء",
+    "فترة انتهاء الصلاحية",
+    "حالة المنتج",
+    "فشل الحصول على معلومات انتهاء صلاحية المنتج",
+    "الحصول على معلومات انتهاء صلاحية المنتج",
+    "تاريخ الإنتاج (انظر إلى جانب المنتج أو أسفله)",
+    "تاريخ الانتهاء أو الفترة الزمنية (سواءً مكتوبة صراحةً في نفس المكان أو فترات زمنية، مثل 6 أشهر أو سنة واحدة)",
+    "هل المنتج المستهدف لا يحدد تاريخ انتهاء الصلاحية صراحةً؟",
+    "إعدادات شاشة التوقف...",
+    "حزمة الأصداف الإضافية",
+    "الإضافات - التواريخ",
+    "الإضافات - التجزئات",
+    "الإضافات - روبوت الدردشة الذكي",
+    "Extras - Chatbot AI"
   ]
 }
