--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb.json
@@ -4412,6 +4412,38 @@
     "alhadu al'aqsaa limustawaa allawn al'azraq lilsharit althaalith",
     "alhadu al'aqsaa limustawaa allawn lilsharit althaalith",
     "satakhtar mayzat Progresses alwanan eashwayiyatan 'iidha tama tamkinuha. wa'iila, fastakhdim al'alwan min altakwini.",
-    "'iidha tama tamkin dawrat al'alwan, fakam eadad alealamat qabl taghyir al'alwan fi mayzat Progresses? 1 ealamat = 0.5 ealamat thalithatan"
+    "'iidha tama tamkin dawrat al'alwan, fakam eadad alealamat qabl taghyir al'alwan fi mayzat Progresses? 1 ealamat = 0.5 ealamat thalithatan",
+    "qad la yakun asm 'iidkhal al'iiedadat farghan.",
+    "qad la yakun wasf 'iidkhal al'iiedadat farghan.",
+    "qad la tahtawi qayimat mafatih al'iiedadat ealaa 'iidkhal 'iiedadat farghi.",
+    "qad la yakun asm miftah al'iiedadat farghan.",
+    "qad la yahtawi miftah al'iiedadat ealaa nawe miftah ghayr salihi.",
+    "'iiedadat alnawat alrayiysiati.",
+    "'iiedadat shashat tawaquf alnawaati.",
+    "'iiedadat bad' tashghil alnawati.",
+    "'iiedadat 'adawat alnawati.",
+    "aikhtiar altakwini.",
+    "tama 'iiqaf tatbiq al'iiedadat alqadim wasayatimu 'iizalatuh fi 'iisdar mustaqbili.",
+    "yutlb mink aikhtiar nuskhat takwini.",
+    "hadad nuskhat takwin liltabdil 'iilayha.",
+    "la yumkin tahdid al'iiedadat",
+    "tarikh al'iintaj ghayr sahih",
+    "fatrat aintiha' alsalahiat ghayr sahiha",
+    "tarikh aliantiha' ghayr sahih",
+    "tarikh al'iintaj",
+    "tarikh aliaintiha'",
+    "fatrat antiha' alsalahia",
+    "halat almuntaj",
+    "fashil alhusul ealaa maelumat aintiha' salahiat almuntaj",
+    "alhusul ealaa maelumat aintiha' salahiat almuntaj",
+    "tarikh al'iintaj (anzur 'iilaa janib almuntaj 'aw 'asfalihi)",
+    "tarikh alaintiha' 'aw alfatrat alzamania (swa'an maktubat srahtan fi nafs almakan 'aw fatarat zamaniatin, mithl 6 'ashhur 'aw sanat wahidatin)",
+    "hal almuntaj almustahdaf la yuhadid tarikh aintiha' alsalahiat srahtan?",
+    "'iiedadat shashat altawaqufi...",
+    "hizmat al'asdaf al'iidafia",
+    "al'iidafat - altawarikh",
+    "al'iidafat - altajziaat",
+    "al'iidafat - rwbut aldardashat aldhakiu",
+    "Extras - Chatbot AI"
   ]
 }
