--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi-T.json
@@ -4412,6 +4412,38 @@
     "第三栏的最大蓝色级别",
     "第三栏的最大颜色级别",
     "如果启用，进度将选择随机颜色。否则，使用配置中的颜色。",
-    "如果启用了颜色循环，进度中更改颜色前需要多少个刻度？1 刻度 = 0.5 秒"
+    "如果启用了颜色循环，进度中更改颜色前需要多少个刻度？1 刻度 = 0.5 秒",
+    "设置条目名称不能为空",
+    "设置条目描述不能为空",
+    "设置条目的设置键列表不能为空",
+    "设置键名称不能为空",
+    "设置键不能包含无效的键类型",
+    "内核主设置",
+    "内核屏保设置",
+    "内核启动画面设置",
+    "内核小部件设置",
+    "选择配置",
+    "旧版设置应用已弃用，并将在未来版本中移除。",
+    "提示您选择配置实例",
+    "选择要切换到的配置实例。",
+    "无法选择配置",
+    "生产日期无效",
+    "有效期无效",
+    "有效期无效",
+    "生产日期",
+    "有效期",
+    "有效期跨度",
+    "产品健康状况",
+    "产品状态",
+    "无法获取产品有效期信息",
+    "获取产品有效期信息",
+    "生产日期（请查看产品侧面或底部）",
+    "有效期或期限（明确写在同一位置或时间段，例如 6 个月或 1 年）",
+    "目标产品是否未明确指定有效期",
+    "屏幕保护程序设置...",
+    "额外 Shell 包",
+    "额外内容 - 日期",
+    "额外内容 - 哈希值",
+    "额外内容 - 聊天机器人 AI"
   ]
 }
