--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi.json
@@ -4412,6 +4412,38 @@
     "dì sān lán de zuìdà lán sè jíbié",
     "dì sān lán de zuìdà yánsè jíbié",
     "rúguǒ qǐyòng, jìndù jiāng xuǎnzé suíjī yánsè. Fǒuzé, shǐyòng pèizhì zhōng de yánsè.",
-    "Rúguǒ qǐyòngle yánsè xúnhuán, jìndù zhòng gēnggǎi yánsè qián xūyào duōshǎo gè kèdù?1 Kèdù = 0.5 Miǎo"
+    "Rúguǒ qǐyòngle yánsè xúnhuán, jìndù zhòng gēnggǎi yánsè qián xūyào duōshǎo gè kèdù?1 Kèdù = 0.5 Miǎo",
+    "Shèzhì tiáomù míngchēng bùnéng wéi kōng",
+    "shèzhì tiáomù miáoshù bùnéng wéi kōng",
+    "shèzhì tiáomù dì shèzhì jiàn lièbiǎo bùnéng wéi kōng",
+    "shèzhì jiàn míngchēng bùnéng wéi kōng",
+    "shèzhì jiàn bùnéng bāohán wúxiào de jiàn lèixíng",
+    "nèihé zhǔ shèzhì",
+    "nèihé píngbǎo shèzhì",
+    "nèihé qǐdòng huàmiàn shèzhì",
+    "nèihé xiǎo bùjiàn shèzhì",
+    "xuǎnzé pèizhì",
+    "jiùbǎn shèzhì yìngyòng yǐ qì yòng, bìng jiàng zài wèilái bǎnběn zhōng yí chú.",
+    "Tíshì nín xuǎnzé pèizhì shílì",
+    "xuǎnzé yào qiēhuàn dào de pèizhì shílì.",
+    "Wúfǎ xuǎnzé pèizhì",
+    "shēngchǎn rìqí wúxiào",
+    "yǒuxiàoqí wúxiào",
+    "yǒuxiàoqí wúxiào",
+    "shēngchǎn rìqí",
+    "yǒuxiàoqí",
+    "yǒuxiàoqí kuàdù",
+    "chǎnpǐn jiànkāng zhuàngkuàng",
+    "chǎnpǐn zhuàngtài",
+    "wúfǎ huòqǔ chǎnpǐn yǒuxiàoqí xìnxī",
+    "huòqǔ chǎnpǐn yǒuxiàoqí xìnxī",
+    "shēngchǎn rìqí (qǐng chákàn chǎnpǐn cèmiàn huò dǐbù)",
+    "yǒuxiàoqí huò qíxiàn (míngquè xiě zài tóngyī wèizhì huò shíjiān duàn, lìrú 6 gè yuè huò 1 nián)",
+    "mùbiāo chǎnpǐn shìfǒu wèi míngquè zhǐdìng yǒuxiàoqí",
+    "píngmù bǎohù chéngxù shèzhì...",
+    "Éwài Shell bāo",
+    "éwài nèiróng - rìqí",
+    "éwài nèiróng - hā xī zhí",
+    "éwài nèiróng - liáotiān jīqìrén AI"
   ]
 }
