--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-27 (3.1.27.49-0.1.2.17-1) noble; urgency=medium
+
+  * General improvements and bug fixes
+    
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Thu, 05 Jun 2025 18:48:08 +0300
+
 nitrocid-27 (3.1.27.49-0.1.2.16-1) noble; urgency=medium
 
   * General improvements and bug fixes
