--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-25 (3.0.25.520-0.1.0.52-1) noble; urgency=medium
+
+  * General improvements and bug fixes
+    
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Thu, 05 Jun 2025 18:47:35 +0300
+
 nitrocid-25 (3.0.25.520-0.1.0.51-1) noble; urgency=medium
 
   * General improvements and bug fixes
