--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-27 (3.1.27.50-0.1.2.17-1) noble; urgency=medium
+
+  * General improvements and bug fixes
+
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Fri, 06 Jun 2025 20:49:16 +0300
+
 nitrocid-27 (3.1.27.49-0.1.2.17-1) noble; urgency=medium
 
   * General improvements and bug fixes
