--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-nitrocid-28 (3.1.28.0-0.1.3.0-1) noble; urgency=medium
+nitrocid-28 (4.0.28.7-0.2.0.0-1) noble; urgency=medium
 
-  * Placeholder changelogs
-    
- -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Fri, 14 Mar 2025 15:05:35 +0300
+  * General improvements and bug fixes
+
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Sat, 07 Jun 2025 12:57:41 +0300
