imp - Also make report for all languages
---

We need to make localized/unlocalized string report for all languages.

---

Type: imp
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb-T.json
@@ -4433,6 +4433,7 @@
     "تاريخ الإنتاج",
     "تاريخ الانتهاء",
     "فترة انتهاء الصلاحية",
+    "صحة المنتج",
     "حالة المنتج",
     "فشل الحصول على معلومات انتهاء صلاحية المنتج",
     "الحصول على معلومات انتهاء صلاحية المنتج",
@@ -4443,7 +4444,6 @@
     "حزمة الأصداف الإضافية",
     "الإضافات - التواريخ",
     "الإضافات - التجزئات",
-    "الإضافات - روبوت الدردشة الذكي",
-    "Extras - Chatbot AI"
+    "الإضافات - روبوت الدردشة الذكي"
   ]
 }
