--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb.json
@@ -4433,6 +4433,7 @@
     "tarikh al'iintaj",
     "tarikh aliaintiha'",
     "fatrat antiha' alsalahia",
+    "sihat almuntaj",
     "halat almuntaj",
     "fashil alhusul ealaa maelumat aintiha' salahiat almuntaj",
     "alhusul ealaa maelumat aintiha' salahiat almuntaj",
@@ -4443,7 +4444,6 @@
     "hizmat al'asdaf al'iidafia",
     "al'iidafat - altawarikh",
     "al'iidafat - altajziaat",
-    "al'iidafat - rwbut aldardashat aldhakiu",
-    "Extras - Chatbot AI"
+    "al'iidafat - rwbut aldardashat aldhakiu"
   ]
 }
