imp - Some more tweaks for the LocaleStation migra...
...tion

---

We are trying to make sure that LocaleStation works properly with Nitrocid
KS before the "real development" deadline.

---

Type: imp
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/eng.json
+++ b/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/eng.json
@@ -1925,8 +1925,8 @@
       "text": "Renamed staged files"
     },
     {
-      "loc": "NKS_SHELLPACKS_GIT_STATUS_NO",
-      "text": "RENAMEDSTAGEDNo renamed staged files."
+      "loc": "NKS_SHELLPACKS_GIT_STATUS_NORENAMEDSTAGED",
+      "text": "No renamed staged files."
     },
     {
       "loc": "NKS_SHELLPACKS_GIT_STATUS_RENAMED",
