--- a/public/Nitrocid/Resources/Languages/arb-T.json
+++ b/public/Nitrocid/Resources/Languages/arb-T.json
@@ -10139,6 +10139,14 @@
     {
       "loc": "NKS_LANGUAGEPACKS_EXCEPTION_METADATADESERIALIZE2",
       "text": "فشل إلغاء تسلسل بيانات تعريف اللغة لـ"
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_BASECONFIGDESERIALIZE",
+      "text": "لا يمكن إلغاء تسلسل التكوين الأساسي {0}"
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_CUSTOMCONFIGDESERIALIZE",
+      "text": "Can't deserialize the custom configuration {0}"
     }
   ]
 }
