--- a/public/Nitrocid/Resources/Languages/arb.json
+++ b/public/Nitrocid/Resources/Languages/arb.json
@@ -10139,6 +10139,14 @@
     {
       "loc": "NKS_LANGUAGEPACKS_EXCEPTION_METADATADESERIALIZE2",
       "text": "fashil 'iilgha' tasalsul bayanat taerif allughat li"
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_BASECONFIGDESERIALIZE",
+      "text": "la yumkin 'iilgha' tasalsul altakwin al'asasii {0}"
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_CUSTOMCONFIGDESERIALIZE",
+      "text": "Can't deserialize the custom configuration {0}"
     }
   ]
 }
