--- a/public/Nitrocid/Resources/Languages/dtc.json
+++ b/public/Nitrocid/Resources/Languages/dtc.json
@@ -10119,6 +10119,14 @@
     {
       "loc": "NKS_LANGUAGEPACKS_EXCEPTION_METADATADESERIALIZE2",
       "text": "Het is niet gelukt om taalmetagegevens te deserialiseren voor"
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_BASECONFIGDESERIALIZE",
+      "text": "Can't deserialize the base configuration {0}"
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_CUSTOMCONFIGDESERIALIZE",
+      "text": "Can't deserialize the custom configuration {0}"
     }
   ]
 }
