--- a/public/Nitrocid/Resources/Languages/kor-T.json
+++ b/public/Nitrocid/Resources/Languages/kor-T.json
@@ -10114,6 +10114,14 @@
     {
       "loc": "NKS_LANGUAGEPACKS_EXCEPTION_METADATADESERIALIZE2",
       "text": "언어 메타데이터의 역직렬화에 실패했습니다."
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_BASECONFIGDESERIALIZE",
+      "text": "Can't deserialize the base configuration {0}"
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_CUSTOMCONFIGDESERIALIZE",
+      "text": "Can't deserialize the custom configuration {0}"
     }
   ]
 }
