ref - We can remove the legacy translation layer
---

Type: ref
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid/Resources/Languages/arb-T.json
+++ b/public/Nitrocid/Resources/Languages/arb-T.json
@@ -10146,7 +10146,7 @@
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_CUSTOMCONFIGDESERIALIZE",
-      "text": "Can't deserialize the custom configuration {0}"
+      "text": "لا يمكن إلغاء تسلسل التكوين المخصص {0}"
     }
   ]
 }
