--- a/public/Nitrocid/Resources/Languages/chi.json
+++ b/public/Nitrocid/Resources/Languages/chi.json
@@ -10124,11 +10124,11 @@
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_BASECONFIGDESERIALIZE",
-      "text": "Can't deserialize the base configuration {0}"
+      "text": "Wúfǎ fǎn xùliè huà jīběn pèizhì {0}"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_CUSTOMCONFIGDESERIALIZE",
-      "text": "Can't deserialize the custom configuration {0}"
+      "text": "Wúfǎ fǎn xùliè huà zì dìngyì pèizhì {0}"
     }
   ]
 }
