--- a/public/Nitrocid/Resources/Languages/dtc.json
+++ b/public/Nitrocid/Resources/Languages/dtc.json
@@ -10122,11 +10122,11 @@
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_BASECONFIGDESERIALIZE",
-      "text": "Can't deserialize the base configuration {0}"
+      "text": "Kan de basisconfiguratie niet deserialiseren {0}"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_CUSTOMCONFIGDESERIALIZE",
-      "text": "Can't deserialize the custom configuration {0}"
+      "text": "Kan de aangepaste configuratie niet deserialiseren {0}"
     }
   ]
 }
