--- a/public/Nitrocid/Resources/Languages/fre.json
+++ b/public/Nitrocid/Resources/Languages/fre.json
@@ -10162,11 +10162,11 @@
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_BASECONFIGDESERIALIZE",
-      "text": "Can't deserialize the base configuration {0}"
+      "text": "Impossible de désérialiser la configuration de base {0}"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_CUSTOMCONFIGDESERIALIZE",
-      "text": "Can't deserialize the custom configuration {0}"
+      "text": "Impossible de désérialiser la configuration personnalisée {0}"
     }
   ]
 }
