--- a/public/Nitrocid/Resources/Languages/ind.json
+++ b/public/Nitrocid/Resources/Languages/ind.json
@@ -10116,11 +10116,11 @@
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_BASECONFIGDESERIALIZE",
-      "text": "Can't deserialize the base configuration {0}"
+      "text": "bes konfigareshan {0} ko diserielaiz nahin kiya ja sakata"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_CUSTOMCONFIGDESERIALIZE",
-      "text": "Can't deserialize the custom configuration {0}"
+      "text": "kastam konfigareshan {0} ko diserielaiz nahin kiya ja sakata"
     }
   ]
 }
