--- a/public/Nitrocid/Resources/Languages/ita.json
+++ b/public/Nitrocid/Resources/Languages/ita.json
@@ -10119,11 +10119,11 @@
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_BASECONFIGDESERIALIZE",
-      "text": "Can't deserialize the base configuration {0}"
+      "text": "Impossibile deserializzare la configurazione di base {0}"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_CUSTOMCONFIGDESERIALIZE",
-      "text": "Can't deserialize the custom configuration {0}"
+      "text": "Impossibile deserializzare la configurazione personalizzata {0}"
     }
   ]
 }
