--- a/public/Nitrocid/Resources/Languages/mal.json
+++ b/public/Nitrocid/Resources/Languages/mal.json
@@ -10119,11 +10119,11 @@
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_BASECONFIGDESERIALIZE",
-      "text": "Can't deserialize the base configuration {0}"
+      "text": "Tidak boleh menyahsiri konfigurasi asas {0}"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_CUSTOMCONFIGDESERIALIZE",
-      "text": "Can't deserialize the custom configuration {0}"
+      "text": "Tidak boleh menyahsiri konfigurasi tersuai {0}"
     }
   ]
 }
