--- a/public/Nitrocid/Resources/Languages/ptg.json
+++ b/public/Nitrocid/Resources/Languages/ptg.json
@@ -10126,11 +10126,11 @@
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_BASECONFIGDESERIALIZE",
-      "text": "Can't deserialize the base configuration {0}"
+      "text": "Não é possível desserializar a configuração base {0}"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_CUSTOMCONFIGDESERIALIZE",
-      "text": "Can't deserialize the custom configuration {0}"
+      "text": "Não é possível desserializar a configuração personalizada {0}"
     }
   ]
 }
