--- a/public/Nitrocid/Resources/Languages/rmn.json
+++ b/public/Nitrocid/Resources/Languages/rmn.json
@@ -10117,11 +10117,11 @@
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_BASECONFIGDESERIALIZE",
-      "text": "Can't deserialize the base configuration {0}"
+      "text": "Nu se poate deserializa configurația de bază {0}"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_CUSTOMCONFIGDESERIALIZE",
-      "text": "Can't deserialize the custom configuration {0}"
+      "text": "Nu se poate deserializa configurația personalizată {0}"
     }
   ]
 }
