--- a/public/Nitrocid/Resources/Languages/arb.json
+++ b/public/Nitrocid/Resources/Languages/arb.json
@@ -10146,7 +10146,7 @@
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_CUSTOMCONFIGDESERIALIZE",
-      "text": "Can't deserialize the custom configuration {0}"
+      "text": "la yumkin 'iilgha' tasalsul altakwin almukhasas {0}"
     }
   ]
 }
