--- a/public/Nitrocid/Resources/Languages/chi-T.json
+++ b/public/Nitrocid/Resources/Languages/chi-T.json
@@ -10124,11 +10124,11 @@
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_BASECONFIGDESERIALIZE",
-      "text": "Can't deserialize the base configuration {0}"
+      "text": "无法反序列化基本配置 {0}"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_CUSTOMCONFIGDESERIALIZE",
-      "text": "Can't deserialize the custom configuration {0}"
+      "text": "无法反序列化自定义配置 {0}"
     }
   ]
 }
