--- a/public/Nitrocid/Resources/Languages/cnt-T.json
+++ b/public/Nitrocid/Resources/Languages/cnt-T.json
@@ -10119,11 +10119,11 @@
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_BASECONFIGDESERIALIZE",
-      "text": "Can't deserialize the base configuration {0}"
+      "text": "無法反序列化基本配置 {0}"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_CUSTOMCONFIGDESERIALIZE",
-      "text": "Can't deserialize the custom configuration {0}"
+      "text": "無法反序列化自訂配置 {0}"
     }
   ]
 }
