--- a/public/Nitrocid/Resources/Languages/cnt.json
+++ b/public/Nitrocid/Resources/Languages/cnt.json
@@ -10119,11 +10119,11 @@
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_BASECONFIGDESERIALIZE",
-      "text": "Can't deserialize the base configuration {0}"
+      "text": "Wúfǎ fǎn xùliè huà jīběn pèizhì {0}"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_CUSTOMCONFIGDESERIALIZE",
-      "text": "Can't deserialize the custom configuration {0}"
+      "text": "Wúfǎ fǎn xùliè huà zì dìng pèizhì {0}"
     }
   ]
 }
