--- a/public/Nitrocid/Resources/Languages/grk.json
+++ b/public/Nitrocid/Resources/Languages/grk.json
@@ -10117,11 +10117,11 @@
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_BASECONFIGDESERIALIZE",
-      "text": "Can't deserialize the base configuration {0}"
+      "text": "Δεν είναι δυνατή η αφαίρεση της βασικής διαμόρφωσης {0}"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_CUSTOMCONFIGDESERIALIZE",
-      "text": "Can't deserialize the custom configuration {0}"
+      "text": "Δεν είναι δυνατή η αφαίρεση της προσαρμοσμένης διαμόρφωσης {0}"
     }
   ]
 }
