--- a/public/Nitrocid/Resources/Languages/kor.json
+++ b/public/Nitrocid/Resources/Languages/kor.json
@@ -10117,11 +10117,11 @@
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_BASECONFIGDESERIALIZE",
-      "text": "Can't deserialize the base configuration {0}"
+      "text": "gibon guseong {0}eul yeogjiglyeolhwahal su eobs-seubnida."
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_CUSTOMCONFIGDESERIALIZE",
-      "text": "Can't deserialize the custom configuration {0}"
+      "text": "sayongja jeong-ui guseong {0}eul yeogjiglyeolhwahal su eobs-seubnida."
     }
   ]
 }
