--- a/public/Nitrocid/Resources/Languages/ltn.json
+++ b/public/Nitrocid/Resources/Languages/ltn.json
@@ -10116,11 +10116,11 @@
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_BASECONFIGDESERIALIZE",
-      "text": "Can't deserialize the base configuration {0}"
+      "text": "Configurationis basis {0} deseri non potest."
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_CUSTOMCONFIGDESERIALIZE",
-      "text": "Can't deserialize the custom configuration {0}"
+      "text": "Configurationis consuetum deseri non potest {0}"
     }
   ]
 }
