--- a/public/Nitrocid/Resources/Languages/ndo.json
+++ b/public/Nitrocid/Resources/Languages/ndo.json
@@ -10116,11 +10116,11 @@
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_BASECONFIGDESERIALIZE",
-      "text": "Can't deserialize the base configuration {0}"
+      "text": "Tidak dapat melakukan deserialisasi konfigurasi dasar {0}"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_CUSTOMCONFIGDESERIALIZE",
-      "text": "Can't deserialize the custom configuration {0}"
+      "text": "Tidak dapat melakukan deserialisasi konfigurasi khusus {0}"
     }
   ]
 }
