--- a/public/Nitrocid/Resources/Languages/ukr.json
+++ b/public/Nitrocid/Resources/Languages/ukr.json
@@ -10116,11 +10116,11 @@
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_BASECONFIGDESERIALIZE",
-      "text": "Can't deserialize the base configuration {0}"
+      "text": "Не вдається десеріалізувати базову конфігурацію {0}"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_CUSTOMCONFIGDESERIALIZE",
-      "text": "Can't deserialize the custom configuration {0}"
+      "text": "Неможливо десеріалізувати спеціальну конфігурацію {0}"
     }
   ]
 }
