--- a/public/Nitrocid/Resources/Languages/vtn.json
+++ b/public/Nitrocid/Resources/Languages/vtn.json
@@ -10116,11 +10116,11 @@
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_BASECONFIGDESERIALIZE",
-      "text": "Can't deserialize the base configuration {0}"
+      "text": "Không thể hủy tuần tự hóa cấu hình cơ sở {0}"
     },
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_CUSTOMCONFIGDESERIALIZE",
-      "text": "Can't deserialize the custom configuration {0}"
+      "text": "Không thể hủy tuần tự hóa cấu hình tùy chỉnh {0}"
     }
   ]
 }
